2003-12-29  John Levon  <levon@movementarian.org>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml: minor language cleanups

	* utils/opcontrol: only allow --verbose when it makes sense

2003-12-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/file_manip_tests.cpp: ensure filename passed to
	  op_realpath() exists

2003-12-28  John Levon  <levon@movementarian.org>

	* doc/internals.xml:
	* libutil++/file_manip.h: fix typos

2003-12-16  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: error message rewording

2003-12-16  Carlo Wood  <carlo@alinoe.com>

	* libregex/tests/Makefile.am: avoid to install mangled-name test file

2003-11-20  John Levon  <levon@movementarian.org>

	* libregex/op_regex.cpp: move global ctor out of namespace
	anon (bug #845616)

2003-11-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: merge all unit mask before generating
	  event description string

2003-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: put unitmask in the same axis as
	  event:count, meaning than unitmask is now a part of the event
	  specification.

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_parse_proc.c: always provide an image name
	  for parsed process in /proc

2003-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* libop/op_cpu_type.c: s/hammer/AMD64 processors/ for user visible
	  name.

2003-11-13  John Levon  <levon@movementarian.org>

	* libutil/op_file.h:
	* libutil/op_file.c: remove op_c_dirname(),
	op_relative_to_absolute_path(), op_is_directory(),
	op_follow_link(), in favour of using realpath(3)

	* libutil/tests/file_tests.c: fixes for above changes

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: changes from above. Add
	op_realpath().

	* libutil++/tests/file_manip_tests.cpp: changes from 
	above.

	* daemon/oprofiled.c:
	* daemon/liblegacy/opd_parse_proc.c:
	* gui/oprof_start_util.cpp:
	* libpp/locate_images.cpp:
	* libpp/profile_spec.cpp: